# tensor-ops-benchmarks

./: .gitignore  BENCHMARK_RESULTS.md  Cargo.toml  readme.md
benches/: tensor_ops.rs
burn-benchmark/: Cargo.toml
burn-benchmark/benches/: tensor_ops.rs
burn-benchmark/src/: lib.rs
candle-benchmark/: .gitignore  Cargo.toml
candle-benchmark/benches/: tensor_ops.rs
candle-benchmark/src/: lib.rs
ndarray-benchmark/: Cargo.toml
ndarray-benchmark/benches/: tensor_ops.rs
ndarray-benchmark/src/: lib.rs
scripts/: runner.sh
src/: burn_impl.rs  candle_impl.rs  lib.rs  ndarray_impl.rs
