# Cargo.toml
[package]
name = "tensor-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tensor libraries - using compatible versions
burn = { version = "0.14", features = ["ndarray", "std"] }
candle-nn = "0.7"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.8"

[[bench]]
name = "tensor_ops"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
