[package]
name = "burn-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Burn tensor library
burn = { version = "0.17", features = ["ndarray", "std"] }

[[bench]]
name = "tensor_ops"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"