[package]
name = "ndarray-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NDArray tensor library
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"
rand = "0.8"
rayon = "1.8"

[[bench]]
name = "tensor_ops"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"